# web-design-rl-environment

./: .gitignore  LICENSE  README.md  pyproject.toml
documentation/: index.md  project-brief.md  thinking_trail.md
documentation/design/: eval_pipeline.md  generator_design.md  grader_design.md
documentation/design/research/: generator_research.md
documentation/prds/eval-pipeline/: PRD.md
documentation/prds/grader-mvp/: PRD.md
documentation/prds/site-generator/: PRD.md
documentation/runbooks/: harbor_grading.md  modal_batch.md
eval/: aggregate_results.py  failure_analysis.py  run_claude_code.py
infra/modal/: __init__.py  app.py  images.py
reports/: .gitkeep
reports/grader-validation/: README.md  scores.csv  scores.json
scripts/: build_task.py  curate.py  evaluate.py  evaluate_all.py  generate.py  grade.py  pull_artifacts.py  report.py  report_all.py  validate_grader.py
src/webdesign_rl/emit/: __init__.py  oracle.py  (+2 more)
task2/: .gitignore  README.md
task2/prototype/: anim_demo.html
task2/tasks/: README.md
task2/tests/: test_anim_cores.py  test_report_anim.py  test_scale_cores.py
task2/webdesign_rl_anim/: aggregate_results_anim.py  curate_anim.py  emit_anim.py  evaluate_anim.py  generate_anim.py  report_all_anim.py  report_anim.py
tasks/: .gitkeep  README.md
tasks/000_saas-landing_swiss-editorial_low/: README.md  report.md  scores.csv  scores.json
tasks/004_editorial-blog_corporate-flat_med/: README.md  report.md  scores.csv  scores.json
tasks/007_event-conference_retro-y2k_med/: README.md  report.md  scores.csv  scores.json
tasks/011_ecommerce-store_brutalist_high/: README.md  report.md  scores.csv  scores.json
tasks/012_restaurant-hospitality_neo-brutalist_low/: README.md  report.md  scores.csv  scores.json
tasks/015_personal-resume_dark-techy_low/: README.md  report.md  scores.csv  scores.json
tasks/019_saas-landing_playful-rounded_med/: README.md  report.md  scores.csv  scores.json
tasks/023_nonprofit-civic_glassmorphism_high/: README.md  report.md  scores.csv  scores.json
tasks/035_local-service_dark-techy_high/: README.md  report.md  scores.csv  scores.json
tasks/036_docs-product_warm-organic_low/: README.md  report.md  scores.csv  scores.json
tasks/038_agency-portfolio_luxury-serif_high/: README.md  report.md  scores.csv  scores.json
templates/: instruction.md.j2  task.toml
templates/environment/: Dockerfile
templates/tests/: test.sh
tests/: conftest.py  test_aggregate.py  test_emit.py  test_eval_aggregate.py  test_eval_batch.py  test_eval_launcher.py  test_generate_client.py  test_generate_curate.py  test_generate_emit_integration.py  test_generate_fonts.py  test_generate_modal_batch.py  test_generate_orchestrator.py  test_generate_pipeline.py  test_generate_quality_gate.py  test_generate_render.py  test_generate_seeds.py  test_generate_slug.py  test_generate_stage2_format.py  test_generate_stage3_normalize.py  test_generate_stage5.py  test_generate_taxonomy.py  test_grade_cli.py  test_grader.py  test_judge.py  test_metrics.py  test_perturb.py  test_pull_artifacts.py  test_render.py  test_render_cli.py  test_render_container.py  test_study.py
tests/fixtures/: _generate.py
(+401 files in other folders)
